--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author : librajt
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://librajt.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
