--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : librajt.me
+title : librajt.github.com
 tagline: 
 author : 
   name : Libra J.T. Ren
