--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : librajt.github.com
-tagline: false
+tagline: 
 author : 
   name : librajt
   email : librajt@live.cn
