--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,9 @@ author :
   email : librajt@live.cn
   github : librajt
   twitter : librajt
-  feedburner : librajt
+  googleplus : librajt
+  facebook : librajt
+  feedburner : 
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
